Design the Why Us Section from the Figma Design

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -7,5 +7,12 @@
     "howWeWork": "كيف نعمل",
     "aboutUs": "من نحن",
     "footerDescription": "قسم فاتورتك على 4 دفعات أبسهولة وبدون تعقيدات بين تجار الجملة والتجزئة حيث نمكن أصحاب الأعمال من زيادة قدرتهم الشرائية والسداد على 4 دفعات سهله وميسرة",
-    "allRightsReserved": "جميع الحقوق محفوظة"
+    "allRightsReserved": "جميع الحقوق محفوظة",
+    "whyUs": "لماذا نحن ؟",
+    "availableAnyTime": "متاح في أي وقت",
+    "availableAnyTimeDesc": "يمكنك إدارة فواتيرك ومتابعة دفعاتك بسهولة عبر أي جهاز وفي أي وقت يناسبك.",
+    "secureRegistration": "التسجيل الآمن",
+    "secureRegistrationDesc": "نظامنا يضمن حماية بياناتك بأحدث تقنيات التشفير، لتسجل وتدفع بثقة واطمئنان.",
+    "flexiblePayment": "دفع مرن وسهل",
+    "flexiblePaymentDesc": "نظامنا يضمن حماية بياناتك بأحدث تقنيات التشفير، لتسجل وتدفع بثقة واطمئنان."
 }
