--- a/locales/messages/en.json
+++ b/locales/messages/en.json
@@ -7,5 +7,12 @@
     "howWeWork": "How We Work",
     "aboutUs": "About Us",
     "footerDescription": "Divide your bill into 4 easy payments without complications between wholesalers and retailers, where we enable business owners to increase their purchasing power and pay in 4 easy and convenient installments.",
-    "allRightsReserved": "All rights reserved"
+    "allRightsReserved": "All rights reserved",
+    "whyUs": "Why us?",
+    "availableAnyTime": "Available at any time",
+    "availableAnyTimeDesc": "You can manage your invoices and track your payments easily across any device and at any time that suits you.",
+    "secureRegistration": "Secure Registration",
+    "secureRegistrationDesc": "Our system ensures the protection of your data with the latest encryption technologies, so you can register and pay with confidence and reassurance.",
+    "flexiblePayment": "Flexible and Easy Payment",
+    "flexiblePaymentDesc": "Our system ensures the protection of your data with the latest encryption technologies, so you can register and pay with confidence and reassurance."
 }
