Adding the Hero Section From Figma Design

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -14,5 +14,13 @@
     "secureRegistration": "التسجيل الآمن",
     "secureRegistrationDesc": "نظامنا يضمن حماية بياناتك بأحدث تقنيات التشفير، لتسجل وتدفع بثقة واطمئنان.",
     "flexiblePayment": "دفع مرن وسهل",
-    "flexiblePaymentDesc": "نظامنا يضمن حماية بياناتك بأحدث تقنيات التشفير، لتسجل وتدفع بثقة واطمئنان."
+    "flexiblePaymentDesc": "نظامنا يضمن حماية بياناتك بأحدث تقنيات التشفير، لتسجل وتدفع بثقة واطمئنان.",
+    "heroTitle1": "خطط تناسب احتياجاتك بنظام",
+    "heroTitle2": "اشتر الان وادفع لاحقاً",
+    "heroTitle3": "للشركات والمؤسسات",
+    "heroDescription1": "قسم فاتورتك على 4 دفعات أبسهولة وبدون تعقيدات",
+    "heroDescription2": "بين تجار الجملة والتجزئة حيث نمكن أصحاب الأعمال",
+    "heroDescription3": "من زيادة قدرتهم الشرائية والسداد على 4 دفعات",
+    "heroDescription4": "سهله وميسرة",
+    "startNow": "ابدأ الان"
 }
