Finish How It Works Section from Figma Design

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -22,5 +22,12 @@
     "heroDescription2": "بين تجار الجملة والتجزئة حيث نمكن أصحاب الأعمال",
     "heroDescription3": "من زيادة قدرتهم الشرائية والسداد على 4 دفعات",
     "heroDescription4": "سهله وميسرة",
-    "startNow": "ابدأ الان"
+    "startNow": "ابدأ الان",
+    "howItWorks": "كيف تعمل تدفقات ؟",
+    "step1": "تسجيل التاجر",
+    "step2": "رفع طلب تقسيط",
+    "step3": "تسجيل العميل",
+    "step4": "مراجعة وموافقة العميل",
+    "step5": "دفع المنصة للتاجر",
+    "step6": "تقسيط العميل للمنصة"
 }
