Finish the About Us Section from The figma design for the landing page

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -29,5 +29,8 @@
     "step3": "تسجيل العميل",
     "step4": "مراجعة وموافقة العميل",
     "step5": "دفع المنصة للتاجر",
-    "step6": "تقسيط العميل للمنصة"
+    "step6": "تقسيط العميل للمنصة",
+    "whoWeAre": "من نحن؟",
+    "aboutUsDescription": "نساعد العملاء بالحصول على المنتجات بنظام الدفعات بدون فوائد قسم فاتورتك على 4 دفعات بسهولة وبدون تعقيدات بين تجار الجملة والتجزئة حيث يمكن أصحاب الأعمال من زيادة قدرتهم الشرائية والسداد على 4 دفعات سهلة وميسرة",
+    "contactUsBtn": "تواصل معنا"
 }
