--- a/locales/messages/en.json
+++ b/locales/messages/en.json
@@ -29,5 +29,8 @@
     "step3": "Customer Registration",
     "step4": "Customer Review and Approval",
     "step5": "Platform Payment to Merchant",
-    "step6": "Customer Installment to Platform"
+    "step6": "Customer Installment to Platform",
+    "whoWeAre": "Who We Are",
+    "aboutUsDescription": "We help clients get products on the system without the need to divide payments into 4 payments and without complications between wholesale and retail trade where business owners can increase their purchasing and payment capacity in an easy and convenient way on 4 payments.",
+    "contactUsBtn": "Contact Us"
 }
