Finish Complain Modal , Contact Modal , The Landing Page Ready to go , need a last Check for Responsive

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -32,5 +32,16 @@
     "step6": "تقسيط العميل للمنصة",
     "whoWeAre": "من نحن؟",
     "aboutUsDescription": "نساعد العملاء بالحصول على المنتجات بنظام الدفعات بدون فوائد قسم فاتورتك على 4 دفعات بسهولة وبدون تعقيدات بين تجار الجملة والتجزئة حيث يمكن أصحاب الأعمال من زيادة قدرتهم الشرائية والسداد على 4 دفعات سهلة وميسرة",
-    "contactUsBtn": "تواصل معنا"
+    "contactUsBtn": "تواصل معنا",
+    "modalTitle": "نهتم بأدق التفاصيل لحل جميع مشكلاتكم",
+    "modalSubtitle": "الرجاء تعبئة الحقول وارسال المشكلة",
+    "personName": "اسم الشخص",
+    "emailAddress": "البريد الالكتروني",
+    "problemType": "نوع المشكلة",
+    "problemDescription": "وصف المشكلة",
+    "sendProblem": "ارسال المشكلة",
+    "contactModalTitle": "لنكن على اتصال ونجيب على استفساراتك اول بأول فريق تدفقات يعمل على مدار الساعة من اجل خدمتكم",
+    "contactModalSubtitle": "اختر وسيلة اتصال تناسبك",
+    "email": "البريد الالكتروني",
+    "whatsapp": "واتساب"
 }
