Add Login , Register Pages from Figma Design

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -43,5 +43,30 @@
     "contactModalTitle": "لنكن على اتصال ونجيب على استفساراتك اول بأول فريق تدفقات يعمل على مدار الساعة من اجل خدمتكم",
     "contactModalSubtitle": "اختر وسيلة اتصال تناسبك",
     "email": "البريد الالكتروني",
-    "whatsapp": "واتساب"
+    "whatsapp": "واتساب",
+    "registerAsMerchant": "تسجيل كتاجر",
+    "registerAsBuyer": "تسجيل كمشتري",
+    "welcomeTitle": "مرحبا بك في تدفقات منصتك الامثل لسهولة جذب عملاؤك",
+    "welcomeSubtitle": "مرحبا بك في تدفقات منصتك الامثل لسهولة جذب عملاؤك",
+    "commercialRegistrationNumber": "رقم السجل التجاري (الهوية الوطنية)",
+    "password": "الرمز السري",
+    "forgotPassword": "نسيت الرمز السري",
+    "login": "تسجيل الدخول",
+    "noAccount": "ليس لديك حساب؟",
+    "createMerchantAccount": "انشاء حساب تاجر",
+    "companyName": "اسم الشركة",
+    "commercialRegistrationNumber": "رقم السجل التجاري",
+    "nationalIdNumber": "رقم الهوية الوطنية",
+    "phoneNumber": "رقم الهاتف",
+    "emailAddress": "البريد الالكتروني",
+    "attachFiles": "ارفاق الملفات (الهوية الوطنية, السجل التجاري)",
+    "chooseFile": "اختيار ملف",
+    "createAccount": "انشاء حساب",
+    "haveAccount": "لديك حساب؟",
+    "merchantLogin": "تسجيل دخول تاجر",
+    "taxNumber": "الرقم الضريبي",
+    "bankName": "اسم البنك",
+    "companyIbanAccountNumber": "رقم حساب الايبان الخاص بالشركة",
+    "next": "التالي",
+    "attachFilesStep2": "ارفاق الملفات (السجل التجاري . الهوية الوطنية . الشهادة البنكية)"
 }
