--- a/locales/messages/en.json
+++ b/locales/messages/en.json
@@ -43,5 +43,30 @@
     "contactModalTitle": "Let's stay in touch and answer your inquiries first and foremost. A Tadfoqat team works around the clock for your service.",
     "contactModalSubtitle": "Choose a contact method that suits you",
     "email": "Email",
-    "whatsapp": "WhatsApp"
+    "whatsapp": "WhatsApp",
+    "registerAsMerchant": "Register as Merchant",
+    "registerAsBuyer": "Register as Buyer",
+    "welcomeTitle": "Welcome to Tadfoqat, your ideal platform for easily attracting your customers",
+    "welcomeSubtitle": "Welcome to Tadfoqat, your ideal platform for easily attracting your customers",
+    "commercialRegistrationNumber": "Commercial Registration Number (National ID)",
+    "password": "Password",
+    "forgotPassword": "Forgot Password",
+    "login": "Login",
+    "noAccount": "Don't have an account?",
+    "createMerchantAccount": "Create a merchant account",
+    "companyName": "Company Name",
+    "commercialRegistrationNumber": "Commercial Registration Number",
+    "nationalIdNumber": "National ID Number",
+    "phoneNumber": "Phone Number",
+    "emailAddress": "Email Address",
+    "attachFiles": "Attach Files (National ID, Commercial Register)",
+    "chooseFile": "Choose File",
+    "createAccount": "Create Account",
+    "haveAccount": "Do you have an account?",
+    "merchantLogin": "Merchant Login",
+    "taxNumber": "Tax Number",
+    "bankName": "Bank Name",
+    "companyIbanAccountNumber": "Company IBAN Account Number",
+    "next": "Next",
+    "attachFilesStep2": "Attach Files (Commercial Register, National ID, Bank Certificate)"
 }
