Created a Reusable data table , Finished The Layout design in the Merchant Control Panel From Figma UI

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -68,5 +68,27 @@
     "bankName": "اسم البنك",
     "companyIbanAccountNumber": "رقم حساب الايبان الخاص بالشركة",
     "next": "التالي",
-    "attachFilesStep2": "ارفاق الملفات (السجل التجاري . الهوية الوطنية . الشهادة البنكية)"
+    "attachFilesStep2": "ارفاق الملفات (السجل التجاري . الهوية الوطنية . الشهادة البنكية)",
+    "dashboard": "لوحة التحكم",
+    "invoices": "الفواتير",
+    "userProfile": "الملف الشخصي",
+    "informationSecurityEngineer": "مهندسة أمن معلومات",
+    "techCompanyForMobileTrading": "شركة تك لتجارة الموبايلات",
+    "addInvoice": "اضافة فاتورة",
+    "pendingBalance": "الرصيد المعلق",
+    "pendingBalanceDesc": "رصيد لا يمكنك سحبه الا بموافقة العميل",
+    "availableBalance": "الرصيد المتاح",
+    "availableBalanceDesc": "رصيد يمكنك سحبه",
+    "withdrawBalance": "اسحب الرصيد",
+    "searchForInvoice": "ابحث عن فاتورة",
+    "customerName": "اسم العميل",
+    "invoiceNumber": "رقم الفاتورة",
+    "amount": "المبلغ",
+    "date": "التاريخ",
+    "invoiceStatus": "حالة الفاتورة",
+    "pending": "قيد الانتظار",
+    "completed": "تمت",
+    "returned": "مسترجعة",
+    "retrieve": "استرجاع",
+    "share": "مشاركة"
 }
