--- a/locales/messages/en.json
+++ b/locales/messages/en.json
@@ -68,5 +68,27 @@
     "bankName": "Bank Name",
     "companyIbanAccountNumber": "Company IBAN Account Number",
     "next": "Next",
-    "attachFilesStep2": "Attach Files (Commercial Register, National ID, Bank Certificate)"
+    "attachFilesStep2": "Attach Files (Commercial Register, National ID, Bank Certificate)",
+    "dashboard": "Dashboard",
+    "invoices": "Invoices",
+    "userProfile": "User Profile",
+    "informationSecurityEngineer": "Information Security Engineer",
+    "techCompanyForMobileTrading": "Tech Company for Mobile Trading",
+    "addInvoice": "Add Invoice",
+    "pendingBalance": "Pending Balance",
+    "pendingBalanceDesc": "Balance you cannot withdraw without customer approval",
+    "availableBalance": "Available Balance",
+    "availableBalanceDesc": "Balance you can withdraw",
+    "withdrawBalance": "Withdraw Balance",
+    "searchForInvoice": "Search for invoice",
+    "customerName": "Customer Name",
+    "invoiceNumber": "Invoice Number",
+    "amount": "Amount",
+    "date": "Date",
+    "invoiceStatus": "Invoice Status",
+    "pending": "Pending",
+    "completed": "Completed",
+    "returned": "Returned",
+    "retrieve": "Retrieve",
+    "share": "Share"
 }
