Add Select UI Component, Design the Complain Form for complains form in merchant control panel

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -90,5 +90,7 @@
     "completed": "تمت",
     "returned": "مسترجعة",
     "retrieve": "استرجاع",
-    "share": "مشاركة"
+    "share": "مشاركة",
+    "problemTitle": "عنوان المشكلة",
+    "sendComplaint": "إرسال شكوى"
 }
