Design the Control Panel for the Client From the Figma UI Design

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -55,10 +55,8 @@
     "noAccount": "ليس لديك حساب؟",
     "createMerchantAccount": "انشاء حساب تاجر",
     "companyName": "اسم الشركة",
-    "commercialRegistrationNumber": "رقم السجل التجاري",
     "nationalIdNumber": "رقم الهوية الوطنية",
     "phoneNumber": "رقم الهاتف",
-    "emailAddress": "البريد الالكتروني",
     "attachFiles": "ارفاق الملفات (الهوية الوطنية, السجل التجاري)",
     "chooseFile": "اختيار ملف",
     "createAccount": "انشاء حساب",
@@ -102,6 +100,16 @@
     "required": "اجباري",
     "addAnotherProduct": "اضافة منتج اخر",
     "totalAmount": "اجمالي المبلغ",
-    "addInvoice": "اضافة فاتورة",
-    "cancel": "الغاء"
+    "cancel": "الغاء",
+    "payTotalAmount": "ادفع اجمالي المبلغ",
+    "upcomingPayments": "الدفعات القادمة",
+    "daysRemaining": "أيام متبقي",
+    "totalInvoiceValue": "قيمة الفواتير الاجمالية",
+    "year": "السنة",
+    "merchantName": "اسم التاجر",
+    "paid": "مدفوع",
+    "remaining": "متبقي",
+    "payInstallment": "ادفع دفعة",
+    "incomplete": "غير مكتملة",
+    "complete": "مكتملة"
 }
