--- a/locales/messages/en.json
+++ b/locales/messages/en.json
@@ -55,10 +55,8 @@
     "noAccount": "Don't have an account?",
     "createMerchantAccount": "Create a merchant account",
     "companyName": "Company Name",
-    "commercialRegistrationNumber": "Commercial Registration Number",
     "nationalIdNumber": "National ID Number",
     "phoneNumber": "Phone Number",
-    "emailAddress": "Email Address",
     "attachFiles": "Attach Files (National ID, Commercial Register)",
     "chooseFile": "Choose File",
     "createAccount": "Create Account",
@@ -74,7 +72,6 @@
     "userProfile": "User Profile",
     "informationSecurityEngineer": "Information Security Engineer",
     "techCompanyForMobileTrading": "Tech Company for Mobile Trading",
-    "addInvoice": "Add Invoice",
     "pendingBalance": "Pending Balance",
     "pendingBalanceDesc": "Balance you cannot withdraw without customer approval",
     "availableBalance": "Available Balance",
@@ -103,5 +100,16 @@
     "addAnotherProduct": "Add another product",
     "totalAmount": "Total Amount",
     "addInvoice": "Add Invoice",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "payTotalAmount": "Pay Total Amount",
+    "upcomingPayments": "Upcoming Payments",
+    "daysRemaining": "days remaining",
+    "totalInvoiceValue": "Total Invoice Value",
+    "year": "Year",
+    "merchantName": "Merchant Name",
+    "paid": "Paid",
+    "remaining": "Remaining",
+    "payInstallment": "Pay Installment",
+    "incomplete": "Incomplete",
+    "complete": "Complete"
 }
