Start the Clients Page in the admin dashboard , set up the actions for this page

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -116,5 +116,30 @@
     "employees": "الموظفين",
     "sales": "المبيعات",
     "withdrawals_requests": "طلبات السحب",
-    "complains": "الشكاوي"
+    "complains": "الشكاوي",
+    "columns": "الأعمدة",
+    "noResults": "لا يوجد نتائج",
+    "previous": "السابق",
+    "search": "ابحث",
+    "verified": "موثق",
+    "unverified": "غير موثق",
+    "createdAt": "تاريخ الانشاء",
+    "updatedAt": "تاريخ التحديث",
+    "deletedAt": "تاريخ الحذف",
+    "status": "الحالة",
+    "actions": "الاجراءات",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "view": "عرض",
+    "add": "اضافة",
+    "save": "حفظ",
+    "close": "اغلاق",
+    "back": "السابق",
+    "name": "الاسم",
+    "mobile_number": "رقم الهاتف",
+    "id_number": "رقم الهوية الوطنية",
+    "tax_number": "الرقم الضريبي",
+    "bank_iban": "رقم حساب الايبان الخاص بالبنك",
+    "bank_name": "اسم البنك",
+    "commercial_number": "رقم السجل التجاري"
 }
