--- a/locales/messages/en.json
+++ b/locales/messages/en.json
@@ -116,5 +116,30 @@
     "employees": "Employees",
     "sales": "Sales",
     "withdrawals_requests": "Withdrawals Requests",
-    "complains": "Complains"
+    "complains": "Complains",
+    "columns": "Columns",
+    "noResults": "No Results",
+    "previous": "Previous",
+    "search": "Search",
+    "verified": "Verified",
+    "unverified": "Unverified",
+    "createdAt": "Created At",
+    "updatedAt": "Updated At",
+    "deletedAt": "Deleted At",
+    "status": "Status",
+    "actions": "Actions",
+    "edit": "Edit",
+    "delete": "Delete",
+    "view": "View",
+    "add": "Add",
+    "save": "Save",
+    "close": "Close",
+    "back": "Back",
+    "name": "Name",
+    "mobile_number": "Mobile Number",
+    "id_number": "ID Number",
+    "tax_number": "Tax Number",
+    "bank_iban": "Bank IBAN",
+    "bank_name": "Bank Name",
+    "commercial_number": "Commercial Number"
 }
