Setup the Login api with frontend and backend

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -141,5 +141,11 @@
     "tax_number": "الرقم الضريبي",
     "bank_iban": "رقم حساب الايبان الخاص بالبنك",
     "bank_name": "اسم البنك",
-    "commercial_number": "رقم السجل التجاري"
+    "commercial_number": "رقم السجل التجاري",
+    "rememberMe": "تذكرني",
+    "loggingIn": "جاري تسجيل الدخول...",
+    "loginSuccess": "تم تسجيل الدخول بنجاح! أهلاً بعودتك.",
+    "loginFailed": "فشل تسجيل الدخول. يرجى التحقق من بيانات الاعتماد.",
+    "networkError": "خطأ في الشبكة. يرجى المحاولة مرة أخرى.",
+    "invalidEmailOrPassword": "البريد الالكتروني أو الرمز السري غير صحيح"
 }
