Setup Upload with Cloudinary , setup the register api with frontend and backend

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -147,5 +147,15 @@
     "loginSuccess": "تم تسجيل الدخول بنجاح! أهلاً بعودتك.",
     "loginFailed": "فشل تسجيل الدخول. يرجى التحقق من بيانات الاعتماد.",
     "networkError": "خطأ في الشبكة. يرجى المحاولة مرة أخرى.",
-    "invalidEmailOrPassword": "البريد الالكتروني أو الرمز السري غير صحيح"
+    "invalidEmailOrPassword": "البريد الالكتروني أو الرمز السري غير صحيح",
+    "registrationSuccess": "تم التسجيل بنجاح! يرجى التحقق من بريدك الإلكتروني للتحقق من حسابك.",
+    "registrationFailed": "فشل التسجيل. يرجى المحاولة مرة أخرى.",
+    "emailAlreadyTaken": "البريد الإلكتروني مستخدم بالفعل",
+    "passwordTooShort": "يجب أن يكون الرمز السري 6 أحرف على الأقل",
+    "requiredFieldsMissing": "يجب ملء جميع الحقول المطلوبة",
+    "fileUploadError": "خطأ في رفع الملفات. يرجى المحاولة مرة أخرى.",
+    "creatingAccount": "جاري إنشاء الحساب...",
+    "uploadingFiles": "جاري رفع الملفات...",
+    "storageAccessDenied": "تم رفض الوصول للتخزين. يرجى التحقق من إعدادات Cloudinary.",
+    "uploadFailed": "فشل رفع الملف. يرجى المحاولة مرة أخرى."
 }
