Setup the Complain api with Contact Server Action for frontend and backend

--- a/locales/messages/ar.json
+++ b/locales/messages/ar.json
@@ -157,5 +157,20 @@
     "creatingAccount": "جاري إنشاء الحساب...",
     "uploadingFiles": "جاري رفع الملفات...",
     "storageAccessDenied": "تم رفض الوصول للتخزين. يرجى التحقق من إعدادات Cloudinary.",
-    "uploadFailed": "فشل رفع الملف. يرجى المحاولة مرة أخرى."
+    "uploadFailed": "فشل رفع الملف. يرجى المحاولة مرة أخرى.",
+    "contactFormTitle": "أرسل لنا رسالة",
+    "contactFormSubtitle": "نحب أن نسمع منك. أرسل لنا رسالة وسنرد عليك في أقرب وقت ممكن.",
+    "subject": "الموضوع",
+    "message": "الرسالة",
+    "sendMessage": "إرسال الرسالة",
+    "sendingMessage": "جاري إرسال الرسالة...",
+    "contactSuccess": "تم إرسال الرسالة بنجاح! سنرد عليك قريباً.",
+    "contactError": "فشل في إرسال الرسالة. يرجى المحاولة مرة أخرى.",
+    "invalidEmail": "يرجى إدخال عنوان بريد إلكتروني صحيح",
+    "messageTooShort": "يجب أن تكون الرسالة 10 أحرف على الأقل",
+    "subjectTooShort": "يجب أن يكون الموضوع 3 أحرف على الأقل",
+    "nameTooShort": "يجب أن يكون الاسم حرفين على الأقل",
+    "complaintSuccess": "تم إرسال الشكوى بنجاح! سنراجعها ونتواصل معك قريباً.",
+    "complaintError": "فشل في إرسال الشكوى. يرجى المحاولة مرة أخرى.",
+    "sendingComplaint": "جاري إرسال الشكوى..."
 }
